# cpp_labs_3

lab1/: CMakeLists.txt
lab1/include/: introduction.hpp
lab1/tests/: introduction.cpp
my_labs/lab1/: CMakeLists.txt
my_labs/lab2/: CMakeLists.txt
my_labs/lab2/cpp/hpp/: arithmetic_mean.hpp
my_labs/lab2/cpp/src/: arithmetic_mean.cpp  main.cpp
my_labs/lab3/: CMakeLists.txt  SimpleIterationMethod.cpp  SimpleIterationMethod.hpp
my_labs/lab3/tests/: CMakeLists.txt  test_SimpleIterationMethod.cpp  test_catch2.cpp
my_labs/lab4/: CMakeLists.txt
my_labs/lab4/include/: iomanip.hpp
my_labs/lab4/tests/: iomanip.cpp
my_labs/lab4_part2/lab3/: CMakeLists.txt  commands_to_build.txt
my_labs/lab4_part2/lab3/include/: proxy.hpp
